<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diary</string>
    <string name="create_entry">Create new entry</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="entryID">Entry ID</string>
    <string name="entryTitle">Entry title</string>
    <string name="entryDate">Entry date</string>
    <string name="entryDescription">Entry description</string>
    <string name="sortByTitle">Sort by title</string>
    <string name="sortByDate">Sort by date</string>
    <string name="editEntryTitle">Edit</string>
    <string name="deleteEntryTitle">Delete</string>
    <string name="viewEntry">View entry</string>
    <string name="divider_description">A visual layout element</string>

</resources>
