<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >
    
    <TextView
        android:id="@+id/entryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/entryDate"
        android:layout_toStartOf="@+id/entryDate"
        android:gravity="center_vertical"
        android:text="@string/entryTitle"
        android:textSize="20sp" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entryDate"
        android:id="@+id/entryDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/entryTitle"
        android:textSize="13sp"
        android:gravity="center_vertical" />
    
<!--     was used for debugging, now non-visible -->
    
    <TextView
        android:id="@+id/entryID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/entryDate"
        android:gravity="center_horizontal"
        android:paddingLeft="120dp"
        android:paddingRight="120dp"
        android:text="@string/entryID"
        android:textSize="13sp" 
        android:visibility="gone" />

</RelativeLayout>
