<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fabric_repeating"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
<!--     <TextView android:id="@+id/diaryEntryActivityID" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:gravity="center_vertical" -->
<!--         android:padding="5dp" -->
<!--         android:textSize="20sp" -->
<!--         android:text="@string/entryID" /> -->
    
    <TextView
        android:id="@+id/diaryEntryActivityTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/entryTitle"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <ImageView android:src="@android:drawable/divider_horizontal_bright"
        android:contentDescription="@string/divider_description"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scaleType="fitXY" />
    
    <TextView android:id="@+id/diaryEntryActivityDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/entryDescription" />

</LinearLayout>
